@@ -144,8 +144,26 @@ pull最近登录成功的、使用在相同version的run.py脚本里的密码，
 
 
 
+-wp, --warm-up [end] [rate]
+------------------------------------------------------------------------
+脚本的task队列开启warm-up模式。
+两个参数分别置顶warm-up的结束日期、warm-up的调整速率。
+（a）结束日期end：普通用法为一个数字，代表从现在算起多少天。也可以置顶一个明确日期，格式为"201907161615"。
+如果为天数，则只有首次使用该参数时生效。参数的设定会被同步到主服务器，脚本重启时，warm-up的设定以主服务器为准。
+如果为明确日期，则warm-up的参数会被重置，脚本重启时永远以明确日期为准，而主服务器的记录也随之更新
+（b）调整速率可以大于1，也可以小于1。但必须大于0。
+（c）如果附加参数不足两个，则结束日子默认为3.0（即3天整）；调整速率默认为2.0（即延迟两倍整）。
+
+
+
 
 (3)其他参数
+-di, --disable-image
+------------------------------------------------------------------------
+禁止浏览器加载图片。对firefox或chrome都适用。
+
+
+
 -c, --chrome
 ------------------------------------------------------------------------
 使用chrome，不支持代理。此参数缺省时默认用firefox。
