@@ -9,6 +9,13 @@ run-2.00（进行中）
 2.全面改版login流程，标准化每个步骤的判定和执行，大幅提高可维护性和可拓展性
 
 
+run-1.49
+------------------------------------------------------------------------
+1.新增在云服务器上对gui模式的支持。实现原理为在云上运行Xvfb服务
+2.从此版本开始，在开启gui模式的时候，可以通过插件来让chrome支持代理
+3.支持warm-up模式。详见readme.txt
+
+
 run-1.48
 ------------------------------------------------------------------------
 1.新增半速版本的follow，like脚本
@@ -17,8 +24,6 @@ run-1.48
 4.将tag也作为pull提取内容的一部分。现在的--pull参数将自动提取目标脚本的tag信息
 5.在login流程中，用户每尝试一次输入账号密码，都及时在服务器中用最新的IG账号标记此脚本
 6.新增--disable-image参数，用于禁止加载图片
-7.新增在云服务器上对gui模式的支持。实现原理为在云上运行Xvfb服务
-8.从此版本开始，在开启gui模式的时候，可以通过插件来让chrome支持代理
 
 
 droplet-1.05
